src/objects/c2g__codaGeneralLedgerAccount__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpgeneralledgeraccount</customHelpPage>
    <description>General ledger account represent different categories of income/expenses/assets/liabilities and reserves.</description>
    <fields>
        <fullName>c2g__AdjustOperatingActivities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowRevaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Revaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet1__c</fullName>
        <label>Balance Sheet 1</label>
        <picklist>
            <picklistValues>
                <fullName>Balance Sheet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet2__c</fullName>
        <label>Balance Sheet 2</label>
        <picklist>
            <controllingField>c2g__BalanceSheet1__c</controllingField>
            <picklistValues>
                <fullName>Current Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intangible Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shareholders Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profit and Loss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceSheet3__c</fullName>
        <label>Balance Sheet 3</label>
        <picklist>
            <controllingField>c2g__BalanceSheet2__c</controllingField>
            <picklistValues>
                <fullName>Bank and Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepayments and Accrued Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debtors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixtures Fittings and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land and Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intangible Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accruals and Deferred Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Payables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creditors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Creditors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payable After 1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creditors Due After 1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital and Reserves</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowCategory__c</fullName>
        <description>Cash Flow Category</description>
        <label>Cash Flow Category</label>
        <picklist>
            <picklistValues>
                <fullName>Operating Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investing Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowLineSummary__c</fullName>
        <label>Cash Flow Line Summary</label>
        <picklist>
            <picklistValues>
                <fullName>(Gain) / Loss on Foreign Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Gain) / Loss on Investment Disposals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Increase) / Decrease in Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Increase) / Decrease in Other Current Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Increase) / Decrease in Receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depreciation &amp; Amortization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividends on Common Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividends on Preference Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividends Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Common Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Employment Creditors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Long Term Borrowing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Other Current Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Payables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Preference Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Short Term Borrowing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase / (Decrease) in Tax Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase of Investment Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale of Investment Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Proceeds from Disposal of Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrealized (Gain) / Loss on Foreign Exchange</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GLAGroup__c</fullName>
        <label>GLA Group</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingCode__c</fullName>
        <label>Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance1__c</fullName>
        <label>Trial Balance 1</label>
        <picklist>
            <picklistValues>
                <fullName>Profit and Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Sheet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance2__c</fullName>
        <label>Trial Balance 2</label>
        <picklist>
            <controllingField>c2g__TrialBalance1__c</controllingField>
            <picklistValues>
                <fullName>Gross Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest and Taxation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBITDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depreciation and Amortization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intangible Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shareholders Funds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__TrialBalance3__c</fullName>
        <label>Trial Balance 3</label>
        <picklist>
            <controllingField>c2g__TrialBalance2__c</controllingField>
            <picklistValues>
                <fullName>Sales Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost of Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depreciation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Hire and Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occupation Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Income and Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank and Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepayments and Accrued Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debtors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixtures Fittings and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land and Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intangible Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accruals and Deferred Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Payables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creditors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Balance Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profit and Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retained Earnings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>General Ledger Account</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__ReportingCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>c2g__GeneralLedgerAccountsinclHierarchy</fullName>
        <columns>NAME</columns>
        <columns>c2g__ReportingCode__c</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__TrialBalance1__c</columns>
        <columns>c2g__TrialBalance2__c</columns>
        <columns>c2g__TrialBalance3__c</columns>
        <columns>c2g__TrialBalance4__c</columns>
        <columns>c2g__BalanceSheet1__c</columns>
        <columns>c2g__BalanceSheet2__c</columns>
        <columns>c2g__BalanceSheet3__c</columns>
        <filterScope>Everything</filterScope>
        <label>General Ledger Accounts with Hierarchy</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Ledger Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>